--- a/resources/web/creator_overview.html
+++ b/resources/web/creator_overview.html
@@ -184,7 +184,7 @@
          <button id="askBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#askModal">Ask</button>
          <button id="bidBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#bidModal">Bid</button>
          <button id="buyBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#buyModal">Buy</button>
-
+         <button id="issueBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#issueModal">Issue Pieces</button>
 
        </div>
      </div>
@@ -256,222 +256,223 @@
 
 
   <!-- The main body -->
+
   <div id="main_body" class="col-md-10">
     <div class="row">
       <script id="main_body_template" type="x-tmpl-mustache">
         <p class="lead">{{.}}</p>
       </script>
     </div>
+  </div>
+  <div class="row">
+    <button id="saveBtn" type="submit" class="btn btn-primary hide">Save</button>
+  </div>
+</div>
 
-    <div class="row">
-      <button id="saveBtn" type="submit" class="btn btn-primary hide">Save</button>
+
+</div>
+
+<div class="col-md-2 col-md-offset-10">  
+
+  <!-- <div class="span2 col-md-2 col-md-offset-10">   -->
+  <!-- The boxes on the right this time-->
+
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col-xs-4">
+              <i class="fa fa-bank fa-5x"></i>
+            </div>
+            <div id ="worth_current" class="col-xs-8 text-right">
+              <script id="worth_current_template" type="x-tmpl-mustache"> 
+                <p class="announcement-heading">{{.}}</p>
+
+                <p class="announcement-text">Worth</p>
+              </script>
+            </div>
+          </div>
+        </div>
+        <a href="creator_worth" rel="keep-params">
+          <div class="panel-footer announcement-bottom">
+            <div class="row">
+              <div class="col-xs-6">
+                View Worth
+              </div>
+              <div class="col-xs-6 text-right">
+                <i class="fa fa-arrow-circle-right"></i>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
     </div>
   </div>
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="panel panel-success">
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col-xs-4">
+              <i class="fa fa-money fa-5x"></i>
+            </div>
+            <div id="price_per_piece_current" class="col-xs-8 text-right">
+              <script id="price_per_piece_current_template" type="x-tmpl-mustache"> 
+                <p class="announcement-heading">{{.}}</p>
 
-
-
-
-  <div class="col-md-2 col-md-offset-10">  
-
-    <!-- <div class="span2 col-md-2 col-md-offset-10">   -->
-    <!-- The boxes on the right this time-->
-
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="panel panel-info">
-          <div class="panel-heading">
+                <p class="announcement-text">Price per piece</p>
+              </script>
+            </div>
+          </div>
+        </div>
+        <a href="creator_pricing" rel="keep-params">
+          <div class="panel-footer announcement-bottom">
             <div class="row">
-              <div class="col-xs-4">
-                <i class="fa fa-bank fa-5x"></i>
+              <div class="col-xs-6">
+                View Pricing
               </div>
-              <div id ="worth_current" class="col-xs-8 text-right">
-                <script id="worth_current_template" type="x-tmpl-mustache"> 
-                  <p class="announcement-heading">{{.}}</p>
-
-                  <p class="announcement-text">Worth</p>
-                </script>
+              <div class="col-xs-6 text-right">
+                <i class="fa fa-arrow-circle-right"></i>
               </div>
             </div>
           </div>
-          <a href="creator_worth" rel="keep-params">
-            <div class="panel-footer announcement-bottom">
-              <div class="row">
-                <div class="col-xs-6">
-                  View Worth
-                </div>
-                <div class="col-xs-6 text-right">
-                  <i class="fa fa-arrow-circle-right"></i>
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
+        </a>
       </div>
     </div>
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="panel panel-success">
-          <div class="panel-heading">
-            <div class="row">
-              <div class="col-xs-4">
-                <i class="fa fa-money fa-5x"></i>
-              </div>
-              <div id="price_per_piece_current" class="col-xs-8 text-right">
-                <script id="price_per_piece_current_template" type="x-tmpl-mustache"> 
-                  <p class="announcement-heading">{{.}}</p>
+  </div>
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="panel panel-warning">
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col-xs-4">
+              <i class="fa fa-cubes fa-5x"></i>
+            </div>
+            <div id="pieces_held_current" class="col-xs-8 text-right">
+              <script id="pieces_held_current_template" type="x-tmpl-mustache"> 
+                <p class="announcement-heading">{{.}}</p>
 
-                  <p class="announcement-text">Price per piece</p>
-                </script>
+                <p class="announcement-text">Pieces held</p>
+              </script>
+            </div>
+          </div>
+        </div>
+        <a href="creator_pieces" rel="keep-params">
+          <div class="panel-footer announcement-bottom">
+            <div class="row">
+              <div class="col-xs-6">
+                View pieces
+              </div>
+              <div class="col-xs-6 text-right">
+                <i class="fa fa-arrow-circle-right"></i>
               </div>
             </div>
           </div>
-          <a href="creator_pricing" rel="keep-params">
-            <div class="panel-footer announcement-bottom">
-              <div class="row">
-                <div class="col-xs-6">
-                  View Pricing
-                </div>
-                <div class="col-xs-6 text-right">
-                  <i class="fa fa-arrow-circle-right"></i>
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
+        </a>
       </div>
     </div>
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="panel panel-warning">
-          <div class="panel-heading">
-            <div class="row">
-              <div class="col-xs-4">
-                <i class="fa fa-cubes fa-5x"></i>
-              </div>
-              <div id="pieces_held_current" class="col-xs-8 text-right">
-                <script id="pieces_held_current_template" type="x-tmpl-mustache"> 
-                  <p class="announcement-heading">{{.}}</p>
+  </div>
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="panel panel-success">
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col-xs-4">
+              <i class="fa fa-money fa-5x"></i>
+            </div>
+            <div id="rewards_paid" class="col-xs-8 text-right">
+              <script id="rewards_paid_template" type="x-tmpl-mustache"> 
+                <p class="announcement-heading">{{.}}</p>
 
-                  <p class="announcement-text">Pieces held</p>
-                </script>
+                <p class="announcement-text">Rewards Paid</p>
+              </script>
+            </div>
+          </div>
+        </div>
+        <a href="creator_rewards" rel="keep-params">
+          <div class="panel-footer announcement-bottom">
+            <div class="row">
+              <div class="col-xs-6">
+                View Rewards
+              </div>
+              <div class="col-xs-6 text-right">
+                <i class="fa fa-arrow-circle-right"></i>
               </div>
             </div>
           </div>
-          <a href="creator_pieces" rel="keep-params">
-            <div class="panel-footer announcement-bottom">
-              <div class="row">
-                <div class="col-xs-6">
-                  View pieces
-                </div>
-                <div class="col-xs-6 text-right">
-                  <i class="fa fa-arrow-circle-right"></i>
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
+        </a>
       </div>
     </div>
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="panel panel-success">
-          <div class="panel-heading">
-            <div class="row">
-              <div class="col-xs-4">
-                <i class="fa fa-money fa-5x"></i>
-              </div>
-              <div id="rewards_paid" class="col-xs-8 text-right">
-                <script id="rewards_paid_template" type="x-tmpl-mustache"> 
-                  <p class="announcement-heading">{{.}}</p>
+  </div>
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="panel panel-danger">
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col-xs-4">
+              <i class="fa fa-empire fa-5x"></i>
+            </div>
+            <div id="backers_current_count" class="col-xs-8 text-right">
 
-                  <p class="announcement-text">Rewards Paid</p>
-                </script>
+              <script id="backers_current_count_template" type="x-tmpl-mustache">
+                <p class="announcement-heading">{{.}}</p>
+
+                <p class="announcement-text"># of Backers</p>
+              </script> 
+            </div>
+          </div>
+        </div>
+        <a href="creator_pieces" rel="keep-params">
+          <div class="panel-footer announcement-bottom">
+            <div class="row">
+              <div class="col-xs-6">
+                View Backers
+              </div>
+              <div class="col-xs-6 text-right">
+                <i class="fa fa-arrow-circle-right"></i>
               </div>
             </div>
           </div>
-          <a href="creator_rewards" rel="keep-params">
-            <div class="panel-footer announcement-bottom">
-              <div class="row">
-                <div class="col-xs-6">
-                  View Rewards
-                </div>
-                <div class="col-xs-6 text-right">
-                  <i class="fa fa-arrow-circle-right"></i>
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
+        </a>
       </div>
     </div>
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="panel panel-danger">
-          <div class="panel-heading">
+  </div>
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="panel">
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col-xs-4">
+              <i class="fa fa-empire fa-5x"></i>
+            </div>
+            <div id="creators_reputation" class="col-xs-8 text-right">
+
+              <script id="creators_reputation_template" type="x-tmpl-mustache">
+                <p class="announcement-heading">{{.}}</p>
+
+                <p class="announcement-text">Reputation</p>
+              </script> 
+            </div>
+          </div>
+        </div>
+        <a href="userdashboard_pieces" rel="keep-params">
+          <div class="panel-footer announcement-bottom">
             <div class="row">
-              <div class="col-xs-4">
-                <i class="fa fa-empire fa-5x"></i>
+              <div class="col-xs-6">
+                View Backers
               </div>
-              <div id="backers_current_count" class="col-xs-8 text-right">
-
-                <script id="backers_current_count_template" type="x-tmpl-mustache">
-                  <p class="announcement-heading">{{.}}</p>
-
-                  <p class="announcement-text"># of Backers</p>
-                </script> 
+              <div class="col-xs-6 text-right">
+                <i class="fa fa-arrow-circle-right"></i>
               </div>
             </div>
           </div>
-          <a href="creator_pieces" rel="keep-params">
-            <div class="panel-footer announcement-bottom">
-              <div class="row">
-                <div class="col-xs-6">
-                  View Backers
-                </div>
-                <div class="col-xs-6 text-right">
-                  <i class="fa fa-arrow-circle-right"></i>
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="panel">
-          <div class="panel-heading">
-            <div class="row">
-              <div class="col-xs-4">
-                <i class="fa fa-empire fa-5x"></i>
-              </div>
-              <div id="creators_reputation" class="col-xs-8 text-right">
-
-                <script id="creators_reputation_template" type="x-tmpl-mustache">
-                  <p class="announcement-heading">{{.}}</p>
-
-                  <p class="announcement-text">Reputation</p>
-                </script> 
-              </div>
-            </div>
-          </div>
-          <a href="userdashboard_pieces" rel="keep-params">
-            <div class="panel-footer announcement-bottom">
-              <div class="row">
-                <div class="col-xs-6">
-                  View Backers
-                </div>
-                <div class="col-xs-6 text-right">
-                  <i class="fa fa-arrow-circle-right"></i>
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
+        </a>
       </div>
     </div>
   </div>
 </div>
+
 </div>
 
 <!-- Modals -->
@@ -709,11 +710,78 @@
      </div>
 
    </div>
-
  </div>
+</div>
 
 
- <!-- end of wrapper -->
+<div id="issueModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Issue Pieces</h4>
+      </div>
+      <div class="modal-body">
+        <form id="issueForm" class="form-horizontal" role="form">
+          <div class="form-group form-group-lg">
+            <label class="col-sm-2 control-label" for="formGroupInputLarge">Price</label>
+            <div class="col-sm-10">
+              <input name="issuePrice" class="form-control" type="text" id="formGroupInputLarge" placeholder="Last price"
+              data-bv-greaterthan="true"
+              data-bv-greaterthan-value=".01"
+              data-bv-greaterthan-message="Must be > .01"
+
+              >
+            </div>
+          </div>
+
+          <div class="form-group form-group-lg">
+            <label class="col-sm-2 control-label" for="formGroupInputLarge">Pieces</label>
+            <div class="col-sm-10">
+              <input name="issuePieces" class="form-control" type="text" id="formGroupInputLarge" placeholder="Pieces"
+              type="text" 
+              data-bv-integer="true"
+              data-bv-integer-message="Must be a whole number"
+
+              >
+            </div>
+          </div>
+
+          <div class="form-group form-group-lg">
+
+           <label class="col-sm-2 control-label" for="formGroupInputLarge">Total</label>
+           <div id="issueTotal" class="col-sm-10 form-control-static">
+
+           </div>
+         </div>
+
+         <div class="form-group form-group-lg">
+
+           <label class="col-sm-2 control-label" for="formGroupInputLarge">Funds</label>
+           <div name="creatorsFunds" class="col-sm-10 form-control-static">
+
+           </div>
+         </div>
+
+         <div class="form-group form-group-lg">
+
+           <label class="col-sm-2 control-label" for="formGroupInputLarge">Potential Funds After</label>
+           <div id="creatorsFundsLeft" class="col-sm-10 form-control-static">
+
+           </div>
+         </div>
+         <button id="placeIssuePiecesBtn" type="submit" class="btn btn-primary">Issue Pieces</button>
+
+       </form>
+
+     </div>
+
+   </div>
+ </div>
+</div>
+
+
+<!-- end of wrapper -->
 </div>
 
 
