--- a/resources/stage/web/userdashboard_overview.html
+++ b/resources/stage/web/userdashboard_overview.html
@@ -457,9 +457,9 @@
         <form id="withdrawForm" class="form-horizontal" role="form">
           <div class="form-group form-group-lg">
             <label class="col-sm-2 control-label" for="formGroupInputLarge">Amount</label>
-             <div class="col-sm-10">
+            <div class="input-group col-sm-10">
             <div id="withdrawSymbol" class="input-group-addon">@</div>
-           
+
               <input name="withdrawAmount" class="form-control" type="text" id="formGroupInputLarge" placeholder="Current funds"
               data-bv-greaterthan="true"
               data-bv-greaterthan-value=".01"
@@ -475,8 +475,8 @@
 
 
            <div class="col-sm-10">
-           <input name="address" type="text" class="form-control" placeholder="Bitcoin Address or Coinbase Email"
-            >
+             <input name="address" type="text" class="form-control" placeholder="Bitcoin Address or Coinbase Email"
+             >
            </div>
          </div>
 
