--- a/resources/stage/web/userdashboard_overview.html
+++ b/resources/stage/web/userdashboard_overview.html
@@ -451,7 +451,7 @@
 
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">withdraw</h4>
+        <h4 class="modal-title">Withdraw</h4>
       </div>
       <div class="modal-body">
         <form id="withdrawForm" class="form-horizontal" role="form">
@@ -459,7 +459,7 @@
             <label class="col-sm-2 control-label" for="formGroupInputLarge">Amount</label>
             <div class="col-sm-10">
               <div class="input-group">
-                <div id="withdrawSymbol" class="input-group-addon">@</div>
+              <div id="withdrawSymbol" class="input-group-addon">?</div>
 
                 <input name="withdrawAmount" class="form-control" type="text" id="formGroupInputLarge" placeholder="Current funds"
                 data-bv-greaterthan="true"
@@ -473,7 +473,7 @@
           </div>
 
           <div class="form-group form-group-lg">
-           <label class="col-sm-2 control-label" for="formGroupInputLarge">Bitcoin Address</label>
+           <label class="col-sm-2 control-label" for="formGroupInputLarge">To</label>
 
 
            <div class="col-sm-10">
