--- a/resources/stage/web/userdashboard_overview.html
+++ b/resources/stage/web/userdashboard_overview.html
@@ -455,7 +455,7 @@
       </div>
       <div class="modal-body">
         <form id="withdrawForm" class="form-horizontal" role="form">
-          <div class="form-group form-group-lg">
+          <div id="withdrawAmountGroup" class="form-group form-group-lg">
             <label class="col-sm-2 control-label" for="formGroupInputLarge">Amount</label>
             <div class="col-sm-10">
               <div class="input-group">
