--- a/resources/stage/web/creator_overview.html
+++ b/resources/stage/web/creator_overview.html
@@ -802,62 +802,65 @@
           <div class="form-group form-group-lg">
             <label class="col-sm-2 control-label" for="formGroupInputLarge">Amount</label>
             <div class="col-sm-10">
+             <div class="input-group">
+              <div id="withdrawSymbol" class="input-group-addon">?</div>
               <input name="withdrawAmount" class="form-control" type="text" id="formGroupInputLarge" placeholder="Current funds"
 
               >
             </div>
-
-
           </div>
 
-          <div class="form-group form-group-lg">
-           <label class="col-sm-2 control-label" for="formGroupInputLarge">Bitcoin Address</label>
+
+        </div>
+
+        <div class="form-group form-group-lg">
+         <label class="col-sm-2 control-label" for="formGroupInputLarge">Bitcoin Address</label>
 
 
-           <div class="col-sm-10">
-             <input name="address" type="text" class="form-control" placeholder="Bitcoin Address or Coinbase Email"
-             >
-           </div>
+         <div class="col-sm-10">
+           <input name="address" type="text" class="form-control" placeholder="Bitcoin Address or Coinbase Email"
+           >
          </div>
+       </div>
 
 
-         <div class="form-group form-group-lg">
+       <div class="form-group form-group-lg">
 
          <label class="col-sm-2 control-label" for="formGroupInputLarge">Total after 5% fee</label>
-           <div id="withdrawAmountAfterFee" class="col-sm-10 form-control-static">
-           </div>
+         <div id="withdrawAmountAfterFee" class="col-sm-10 form-control-static">
          </div>
+       </div>
 
-         <div class="form-group form-group-lg">
+       <div class="form-group form-group-lg">
 
-           <label class="col-sm-2 control-label" for="formGroupInputLarge">Your Funds</label>
-           <div id="funds" class="col-sm-10 form-control-static">
-           </div>
+         <label class="col-sm-2 control-label" for="formGroupInputLarge">Your Funds</label>
+         <div id="funds" class="col-sm-10 form-control-static">
          </div>
+       </div>
 
-         <div class="form-group form-group-lg">
+       <div class="form-group form-group-lg">
 
-           <label class="col-sm-2 control-label" for="formGroupInputLarge">Potential Funds After</label>
-           <div id="fundsLeft" class="col-sm-10 form-control-static">
+         <label class="col-sm-2 control-label" for="formGroupInputLarge">Potential Funds After</label>
+         <div id="fundsLeft" class="col-sm-10 form-control-static">
 
-           </div>
          </div>
+       </div>
 
-         <div class="form-group form-group-lg">
+       <div class="form-group form-group-lg">
 
-           <label class="col-sm-2 control-label" for="formGroupInputLarge">Safety Rating After</label>
-           <div id="safetyRatingAfter" class="col-sm-10 form-control-static">
+         <label class="col-sm-2 control-label" for="formGroupInputLarge">Safety Rating After</label>
+         <div id="safetyRatingAfter" class="col-sm-10 form-control-static">
 
-           </div>
          </div>
+       </div>
 
-         <button id="placeWithdrawBtn" type="submit" class="btn btn-primary">Withdraw</button>
+       <button id="placeWithdrawBtn" type="submit" class="btn btn-primary">Withdraw</button>
 
-       </form>
-     </div>
-
+     </form>
    </div>
+
  </div>
+</div>
 </div>
 
 <div id="rewardModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
