--- a/resources/testweb/userdashboard_overview.html
+++ b/resources/testweb/userdashboard_overview.html
@@ -159,7 +159,7 @@
     <div class="row">
 
       <div class="col-md-6">
-        <h1 id="page_title"><small> overview </small></h1>
+        <h1> <span id="page_title"></span> <small> overview</small> </h1> 
       </div>
       <div class="col-md-6">
         <button id="depositBtn" type="button" class="btn btn-primary btn-lg pull-right hide" data-toggle="modal" data-target="#depositModal">Deposit
