--- a/resources/web/userdashboard_prices.html
+++ b/resources/web/userdashboard_prices.html
@@ -142,7 +142,7 @@
 
       <div class="row">
         <div class="col-lg-12">
-          <h1 id="page_title"><small> price history </small></h1>
+          <h1> <span id="page_title"></span> <small> price history</small> </h1> 
           <ol class="breadcrumb">
             <li><a href="userdashboard_overview"><i class="fa fa-dashboard"></i> Overview</a></li>
             <li class="active"><i class="fa fa-table"></i> Prices</li>
