--- a/resources/testweb/creators_pages/Leonardo_Davinci.html
+++ b/resources/testweb/creators_pages/Leonardo_Davinci.html
@@ -167,7 +167,7 @@
           </div> 
          </div> 
         </div> 
-        <a href="userdashboard_funds"> 
+        <a href="/users/funds"> 
          <div class="panel-footer announcement-bottom"> 
           <div class="row"> 
            <div class="col-xs-6">
@@ -225,7 +225,7 @@
           </div> 
          </div> 
         </div> 
-        <a href="userdashboard_pieces"> 
+        <a href="/users/pieces"> 
          <div class="panel-footer announcement-bottom"> 
           <div class="row"> 
            <div class="col-xs-6">
@@ -254,7 +254,7 @@
           </div> 
          </div> 
         </div> 
-        <a href="userdashboard_pieces"> 
+        <a href="/users/pieces"> 
          <div class="panel-footer announcement-bottom"> 
           <div class="row"> 
            <div class="col-xs-6">
