--- a/resources/testweb/creators_register.html
+++ b/resources/testweb/creators_register.html
@@ -414,12 +414,15 @@
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
         <button id="settingsSaveBtn" type="submit" class="btn btn-primary"
-        >Take me to my page</button>
+        >Save</button>
       </div>
     </div>
 
   </form>
 </script>
+<button id="takeMeHomeBtn" type="submit" class="btn btn-primary"
+        >Take me to my page</button>
+
 </div>
 </div>
 </div>
